# ALICE-CRM

./: Cargo.toml  README.md  README_JP.md
src/: activity.rs  contact.rs  deal.rs  engine.rs  field.rs  funnel.rs  id_gen.rs  integration_tests.rs  lead_score.rs  lib.rs  note.rs  prelude.rs  rfm.rs  signed_contact.rs
