[package]
name = "alice-crm"
version = "1.1.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
license = "AGPL-3.0"
description = "ALICE CRM - Customer Relationship Management with deal pipeline, lead scoring, RFM segmentation, and funnel analytics"

[lib]
crate-type = ["rlib"]

[dependencies]
alice-blockchain = { path = "../ALICE-Blockchain" }
